<resources>
    <string name="app_name">Guessinggame</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="guess">guess</string>
    <string name="guessinggame">guessingGame</string>
    <string name="enter_a_number_then_click_guess">Enter a number, then click Guess</string>
    <string name="enter_a_number_between_1_and_100">Enter a number between 1 and 100</string>
    <string name="write_number">write_number</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="game_stats">Game stats</string>
    <string name="about">About</string>
</resources>